docs(m0): aligner la préparation scip-java sur 0.13.1